cleanup debug info

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -403,10 +403,14 @@ jobs:
             echo Stack names: "${STACKS[@]}"
             echo "export OldWorkflowID=\"$OldWorkflowID\"" >> $BASH_ENV
             echo "export STACKS=$STACKS" >> $BASH_ENV
+            cat $BASH_ENV
       - run:
           name: Remove old stacks and files
           command: |
+            cat $BASH_ENV
             source $BASH_ENV
+            echo $STACKS
+            echo $OldWorkflowID
             if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
             then
               echo OldWorkflowID: "${OldWorkflowID}"
