--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -402,7 +402,7 @@ jobs:
                     --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
             echo Stack names: "${STACKS[@]}"
             echo "export OldWorkflowID=\"$OldWorkflowID\"" >> $BASH_ENV
-            echo "export STACKS=($STACKS)" >> $BASH_ENV
+            echo "export STACKS=($STACKS[@])" >> $BASH_ENV
             cat $BASH_ENV
       - run:
           name: Remove old stacks and files
